--- a/index.html
+++ b/index.html
@@ -1,67 +1,240 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CAP Garland, LLC</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ETA N-TAILLARD — Travaux agricoles & entretien</title>
+  <meta name="description" content="ETA N-TAILLARD — travaux agricoles, entretien des parcelles et logistique de saison. Basé à Chennegy (10190)."/>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f0f0;
-      color: #333;
+    :root{
+      --primary:#166534;   /* green */
+      --accent:#eab308;    /* gold */
+      --bg:#0b110c;        /* deep bg */
+      --surface:#101a12;   /* cards */
+      --text:#ecfdf5;      /* light */
+      --muted:#cfe9d7;     /* muted */
+      --ring:0 10px 30px rgba(22,101,52,.28);
     }
-    header {
-      background-color: #003366;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
+    *{box-sizing:border-box}
+    html,body{
+      margin:0;padding:0;
+      font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;
+      background:
+        radial-gradient(900px 600px at -10% -10%, #166534 0%, transparent 60%),
+        radial-gradient(800px 500px at 110% 10%, #eab30833 0%, transparent 55%),
+        var(--bg);
+      color:var(--text);
     }
-    section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    h1, h2 {
-      color: #003366;
-    }
-    .contact {
-      background: #fff;
-      padding: 20px;
-      border-left: 5px solid #003366;
-      margin-top: 30px;
-    }
-    footer {
-      background-color: #003366;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 50px;
+    img{max-width:100%;display:block;border-radius:14px}
+    a{color:inherit;text-decoration:none}
+    .container{max-width:1150px;margin:0 auto;padding:24px}
+
+    /* Header */
+    header{position:sticky;top:0;z-index:40;background:rgba(16,26,18,.7);backdrop-filter:blur(10px);border-bottom:1px solid rgba(207,233,215,.16)}
+    .topbar{display:flex;align-items:center;justify-content:space-between;padding:14px 24px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:900;letter-spacing:.5px}
+    .brand-badge{width:34px;height:34px;border-radius:10px;background:linear-gradient(145deg,#16a34a,#22c55e);display:grid;place-items:center;box-shadow:var(--ring)}
+    .brand-badge svg{filter:drop-shadow(0 2px 6px rgba(0,0,0,.35))}
+    nav{display:flex;gap:14px;align-items:center}
+    nav a{color:#ecfdf5cc;font-weight:600;padding:8px 10px;border-radius:8px}
+    nav a:hover{background:rgba(207,233,215,.12)}
+    .cta{background:var(--accent);color:#1f2937;padding:9px 14px;border-radius:10px;font-weight:800;box-shadow:0 8px 18px rgba(234,179,8,.25)}
+    .menu-btn{display:none;border:1px solid rgba(207,233,215,.3);padding:8px 10px;border-radius:10px;color:#ecfdf5cc;background:transparent}
+
+    /* Hero */
+    .hero{position:relative;display:grid;grid-template-columns:1.05fr .95fr;gap:26px;align-items:center;padding:56px 24px}
+    .card-glow{position:absolute;inset:-1px;border-radius:20px;pointer-events:none;background:conic-gradient(from 90deg at 50% 50%, rgba(22,163,74,.18), rgba(234,179,8,.14), rgba(22,163,74,.18));filter:blur(48px);opacity:.65;z-index:-1}
+    .hero h1{font-size:clamp(28px,5vw,52px);line-height:1.05;margin:0 0 10px}
+    .hero p{font-size:1.07rem;color:var(--muted);margin:0}
+    .hero-actions{margin-top:20px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(180deg,#16a34a,#166534);color:#fff;padding:12px 18px;border-radius:12px;font-weight:800;box-shadow:var(--ring)}
+    .btn svg{transition:transform .3s}.btn:hover svg{transform:translateX(4px)}
+    .btn.secondary{background:linear-gradient(180deg,#eab308,#ca8a04);color:#1a1a1a}
+    .hero-visual{position:relative}
+    .gloss{position:absolute;inset:0;border-radius:14px;background:linear-gradient(180deg,rgba(255,255,255,.08),transparent 30%);pointer-events:none}
+    .chips{position:absolute;left:-12px;bottom:-12px;display:flex;gap:10px;flex-wrap:wrap}
+    .chip{display:inline-flex;align-items:center;gap:8px;background:rgba(10,15,10,.78);border:1px solid rgba(207,233,215,.22);color:#f0fdf4;padding:8px 10px;border-radius:999px;font-size:.9rem;backdrop-filter:blur(6px);animation:float 6s ease-in-out infinite}
+    .chip:nth-child(2){animation-delay:1.1s}.chip:nth-child(3){animation-delay:2.2s}
+    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+
+    /* Sections */
+    section{padding:64px 24px}
+    section h2{font-size:clamp(22px,3.2vw,34px);margin:0 0 14px}
+    .muted{color:var(--muted)}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:16px;margin-top:16px}
+    .card{background:var(--surface);border:1px solid rgba(207,233,215,.18);border-radius:16px;box-shadow:0 8px 24px rgba(0,0,0,.35);padding:18px;transform:translateY(6px);opacity:0;transition:transform .6s cubic-bezier(.2,.8,.2,1), opacity .6s}
+    .card.show{transform:none;opacity:1}
+    .gallery{display:grid;grid-template-columns:repeat(2,1fr);gap:14px}
+    .gallery img{aspect-ratio:4/3;object-fit:cover;border:1px solid rgba(207,233,215,.18);transition:transform .4s, box-shadow .4s}
+    .gallery img:hover{transform:translateY(-4px);box-shadow:0 18px 40px rgba(0,0,0,.45)}
+
+    /* Contact */
+    .contact-box{background:linear-gradient(145deg,rgba(234,179,8,.95),rgba(234,179,8,.88));color:#1f2937;border-radius:18px;padding:24px;box-shadow:0 14px 34px rgba(234,179,8,.25);border:1px solid rgba(0,0,0,.08)}
+    .contact-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px}
+    .contact-actions{margin-top:12px;display:flex;gap:10px;flex-wrap:wrap}
+    .contact-actions a{display:inline-flex;align-items:center;gap:8px;background:var(--primary);color:#fff;padding:10px 14px;border-radius:10px;font-weight:800;box-shadow:var(--ring)}
+    .contact-actions a:hover{filter:brightness(1.08)}
+
+    /* Footer */
+    footer{background:#0a140c;color:#bbf7d0;text-align:center;padding:22px;border-top:1px solid rgba(207,233,215,.18)}
+
+    /* Responsive */
+    @media (max-width:900px){
+      .hero{grid-template-columns:1fr}
+      .menu-btn{display:inline-flex}
+      nav{display:none}
+      nav.open{display:flex;flex-direction:column;position:absolute;top:62px;right:14px;background:rgba(16,26,18,.95);border:1px solid rgba(207,233,215,.18);padding:10px;border-radius:12px}
+      .gallery{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>CAP Garland, LLC</h1>
-    <p>Private Investment Fund</p>
-  </header>
 
-  <section>
-    <h2>About Us</h2>
-    <p>CAP Garland, LLC is a Washington-based private investment fund focused on delivering value through diversified investment strategies.</p>
-
-    <h2>Contact</h2>
-    <div class="contact">
-      <p><strong>Address:</strong> 915 W 2nd Ave, Spokane, WA 99201</p>
-      <p><strong>Email:</strong> <a href="mailto:ryanberg@capgarland.shop">ryanberg@capgarland.shop</a></p>
-      <p><strong>Phone:</strong> (509) 822-3850</p>
+<header>
+  <div class="topbar container">
+    <div class="brand">
+      <div class="brand-badge" aria-hidden="true">
+        <!-- tractor icon -->
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg"><path d="M3 15a4 4 0 1 0 8 0 4 4 0 0 0-8 0Zm10-6V5h3l2 4h2a2 2 0 0 1 2 2v6h-2a4 4 0 1 0-8 0H9a4 4 0 1 0-6 0H2v-2l2-4h9V9Z"/></svg>
+      </div>
+      <span>ETA N-TAILLARD</span>
     </div>
-  </section>
 
-  <footer>
-    &copy; 2025 CAP Garland, LLC. All rights reserved.
-  </footer>
+    <button class="menu-btn" id="menuBtn" aria-label="Menu">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="#ecfdf5" xmlns="http://www.w3.org/2000/svg"><path d="M3 7h18v2H3zM3 11h18v2H3zM3 15h18v2H3z"/></svg>
+    </button>
+
+    <nav id="mainNav">
+      <a href="#about">À propos</a>
+      <a href="#services">Services</a>
+      <a href="#gallery">Galerie</a>
+      <a href="#contact" class="cta">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<section class="hero container">
+  <span class="card-glow" aria-hidden="true"></span>
+  <div>
+    <h1>Prestations agricoles fiables & réactives</h1>
+    <p>
+      <strong>ETA N-TAILLARD</strong> — travaux de saison, entretien des parcelles et logistique
+      pour exploitations et domaines autour de Chennegy (Aube).
+    </p>
+    <div class="hero-actions">
+      <a href="#services" class="btn" aria-label="Voir les services">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="#fff"><path d="M12 2 9.8 9.8 2 12l7.8 2.2L12 22l2.2-7.8L22 12l-7.8-2.2L12 2z"/></svg>
+        Voir les services
+      </a>
+      <a href="#contact" class="btn secondary" aria-label="Nous contacter">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="#1a1a1a"><path d="M4 5h16v10H7l-3 3V5z"/></svg>
+        Nous contacter
+      </a>
+    </div>
+    <p class="muted" style="margin-top:12px;display:flex;align-items:center;gap:10px;">
+      <!-- phone -->
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="#cfe9d7" xmlns="http://www.w3.org/2000/svg"><path d="M6.6 10.8a15.1 15.1 0 0 0 6.6 6.6l2.2-2.2a1 1 0 0 1 1-.25 11 11 0 0 0 3.5.56 1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 7a1 1 0 0 1 1-1h3.48a1 1 0 0 1 1 1 11 11 0 0 0 .56 3.5 1 1 0 0 1-.25 1l-2.2 2.2Z"/></svg>
+      +33 7 59 05 46 52 • support@trendorae.shop
+    </p>
+    <p class="muted">Adresse : CHEMIN DES RIGOLES, 10190 CHENNEGY, France</p>
+  </div>
+
+  <div class="hero-visual">
+    <img src="https://i.pinimg.com/736x/e9/cd/c4/e9cdc4460c8c057f85f3cb56c3bd3e39.jpg" alt="Tracteur au travail sur parcelle">
+    <span class="gloss" aria-hidden="true"></span>
+    <div class="chips" aria-hidden="true">
+      <span class="chip">Travaux de saison</span>
+      <span class="chip">Entretien</span>
+      <span class="chip">Logistique</span>
+    </div>
+  </div>
+</section>
+
+<section id="about" class="container">
+  <h2>À propos</h2>
+  <p class="muted">
+    Équipe de terrain, matériel adapté et planning clair. Interventions à la demande, avec
+    comptes-rendus simples et souci constant de la qualité et de la sécurité.
+  </p>
+  <div class="cards reveal">
+    <div class="card"><h3>Réactivité</h3><p>Créneaux rapides selon météo & saison.</p></div>
+    <div class="card"><h3>Qualité</h3><p>Procédures soignées, respect des parcelles.</p></div>
+    <div class="card"><h3>Transparence</h3><p>Devis clair, suivi par email/SMS.</p></div>
+    <div class="card"><h3>Sécurité</h3><p>EPI et conformité machines.</p></div>
+  </div>
+</section>
+
+<section id="services" class="container">
+  <h2>Nos services</h2>
+  <div class="cards reveal">
+    <div class="card"><h3>Préparation & semis</h3><p>Prépa des sols, travail léger & semis ciblés.</p></div>
+    <div class="card"><h3>Entretien des parcelles</h3><p>Fauchage, débroussaillage, inter-rangs.</p></div>
+    <div class="card"><h3>Récolte & transport léger</h3><p>Aide aux chantiers et bennes légères.</p></div>
+    <div class="card"><h3>Services à la carte</h3><p>Interventions ponctuelles selon besoin.</p></div>
+  </div>
+</section>
+
+<section id="gallery" class="container">
+  <h2>Galerie</h2>
+  <div class="gallery">
+    <img src="https://i.pinimg.com/736x/17/17/d1/1717d198da87f1b7668ebbb044af2b49.jpg" alt="Entretien des bords de champs">
+    <img src="https://i.pinimg.com/736x/bc/64/9c/bc649c4789f7ca4b3e0c6b8e8df9263f.jpg" alt="Matériel agricole et parcelles">
+  </div>
+</section>
+
+<section id="contact" class="container">
+  <h2>Contact</h2>
+  <div class="contact-box">
+    <div class="contact-grid">
+      <div><strong>Entreprise :</strong> ETA N-TAILLARD</div>
+      <div><strong>Téléphone :</strong> +33 7 59 05 46 52</div>
+      <div><strong>Email :</strong> support@trendorae.shop</div>
+      <div style="grid-column:1/-1"><strong>Adresse :</strong> CHEMIN DES RIGOLES, 10190 CHENNEGY, France</div>
+    </div>
+    <div class="contact-actions">
+      <a href="mailto:support@trendorae.shop?subject=Demande%20de%20prestations">
+        <!-- mail -->
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M4 6h16a2 2 0 0 1 2 2v.3l-10 6-10-6V8a2 2 0 0 1 2-2Zm16 4.1V18a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-7.9l8 4.8 8-4.8Z"/></svg>
+        Email
+      </a>
+      <a href="tel:+33759054652">
+        <!-- phone -->
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M6.6 10.8a15.1 15.1 0 0 0 6.6 6.6l2.2-2.2a1 1 0 0 1 1-.25 11 11 0 0 0 3.5.56 1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 7a1 1 0 0 1 1-1h3.48a1 1 0 0 1 1 1 11 11 0 0 0 .56 3.5 1 1 0 0 1-.25 1l-2.2 2.2Z"/></svg>
+        Appeler
+      </a>
+      <a href="https://wa.me/33759054652" target="_blank" rel="noopener">
+        <!-- whatsapp-like -->
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M20 3.6A10 10 0 0 0 4 17.6L3 22l4.5-1A10 10 0 1 0 20 3.6Zm-8 2.4a7 7 0 0 1 0 14 6.9 6.9 0 0 1-3.4-.9l-.3-.2-2.1.5.6-2-.2-.3a7 7 0 0 1 5.4-11.1Z"/></svg>
+        WhatsApp
+      </a>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © <span id="year"></span> ETA N-TAILLARD — Tous droits réservés
+</footer>
+
+<script>
+  // Mobile menu
+  const btn = document.getElementById('menuBtn');
+  const nav = document.getElementById('mainNav');
+  btn?.addEventListener('click', ()=> nav.classList.toggle('open'));
+
+  // Scroll-reveal
+  const io = new IntersectionObserver((entries)=>{
+    entries.forEach(e=>{
+      if(e.isIntersecting){
+        e.target.querySelectorAll('.card').forEach((c,i)=>setTimeout(()=>c.classList.add('show'), i*90));
+        io.unobserve(e.target);
+      }
+    });
+  }, {threshold:.18});
+  document.querySelectorAll('.reveal').forEach(el=>io.observe(el));
+
+  // Year
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
